--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,7 @@
                     timerLabel: "Süre:",
                     questions: [
                      {
-                            question: "Karam var, beyazım var. Küçük bir ağacım var. Ailem kalabalıktır.Bir dalda 100 kardeşim var.",
+                            question: "Karam var, beyazım var.\n Küçük bir ağacım var.\n Ailem kalabalıktır.\nBir dalda 100 kardeşim var.",
                             answer: "Üzüm",
                             hint: "Salkımlar halinde büyür ve şarap yapılır",
                             possibleAnswers: ["üzüm", "salkım"]
